--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "eslint ."
   },
   "author": "Olli-Pekka Aro",
@@ -15,6 +15,7 @@
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   },
   "dependencies": {
@@ -22,5 +23,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.5"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
