--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "patientor-backend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "node build/index.js"
+    "start": "node build/src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +22,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^10.0.0"
   }
 }
